helmcharts/ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: hoangnv46-namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
      service:
        name: book-api
        port:
          number: 3000
  rules:
  - http:
      paths:
      - path: "/book"
        pathType: Prefix
        backend:
          service: 
            name: book-api
            port:
              number: 3000
      - path: /order
        pathType: Prefix
        backend:
          service: 
            name: order-api
            port:
              number: 5000
      - path: /customer
        pathType: Prefix
        backend:
          service: 
            name: customer-api
            port:
              number: 4000
    # host: bookapp.com # domain name
